; ModuleID = '/home/carl/AnghaBench/linux/kernel/time/extr_timekeeping.c_halt_fast_timekeeper.c'
source_filename = "/home/carl/AnghaBench/linux/kernel/time/extr_timekeeping.c_halt_fast_timekeeper.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tk_read_base = type { i32*, i64, i64 }
%struct.timekeeper = type { %struct.tk_read_base, i64, %struct.tk_read_base }

@halt_fast_timekeeper.tkr_dummy = internal global %struct.tk_read_base zeroinitializer, align 8
@cycles_at_suspend = common dso_local global i32 0, align 4
@dummy_clock = common dso_local global i32 0, align 4
@tk_fast_mono = common dso_local global i32 0, align 4
@tk_fast_raw = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.timekeeper*)* @halt_fast_timekeeper to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @halt_fast_timekeeper(%struct.timekeeper* %0) #0 {
  %2 = alloca %struct.timekeeper*, align 8
  %3 = alloca %struct.tk_read_base*, align 8
  store %struct.timekeeper* %0, %struct.timekeeper** %2, align 8
  %4 = load %struct.timekeeper*, %struct.timekeeper** %2, align 8
  %5 = getelementptr inbounds %struct.timekeeper, %struct.timekeeper* %4, i32 0, i32 2
  store %struct.tk_read_base* %5, %struct.tk_read_base** %3, align 8
  %6 = load %struct.tk_read_base*, %struct.tk_read_base** %3, align 8
  %7 = call i32 @memcpy(%struct.tk_read_base* @halt_fast_timekeeper.tkr_dummy, %struct.tk_read_base* %6, i32 24)
  %8 = load %struct.tk_read_base*, %struct.tk_read_base** %3, align 8
  %9 = call i32 @tk_clock_read(%struct.tk_read_base* %8)
  store i32 %9, i32* @cycles_at_suspend, align 4
  store i32* @dummy_clock, i32** getelementptr inbounds (%struct.tk_read_base, %struct.tk_read_base* @halt_fast_timekeeper.tkr_dummy, i32 0, i32 0), align 8
  %10 = load %struct.tk_read_base*, %struct.tk_read_base** %3, align 8
  %11 = getelementptr inbounds %struct.tk_read_base, %struct.tk_read_base* %10, i32 0, i32 1
  %12 = load i64, i64* %11, align 8
  %13 = load %struct.timekeeper*, %struct.timekeeper** %2, align 8
  %14 = getelementptr inbounds %struct.timekeeper, %struct.timekeeper* %13, i32 0, i32 1
  %15 = load i64, i64* %14, align 8
  %16 = add nsw i64 %12, %15
  store i64 %16, i64* getelementptr inbounds (%struct.tk_read_base, %struct.tk_read_base* @halt_fast_timekeeper.tkr_dummy, i32 0, i32 2), align 8
  %17 = call i32 @update_fast_timekeeper(%struct.tk_read_base* @halt_fast_timekeeper.tkr_dummy, i32* @tk_fast_mono)
  %18 = load %struct.timekeeper*, %struct.timekeeper** %2, align 8
  %19 = getelementptr inbounds %struct.timekeeper, %struct.timekeeper* %18, i32 0, i32 0
  store %struct.tk_read_base* %19, %struct.tk_read_base** %3, align 8
  %20 = load %struct.tk_read_base*, %struct.tk_read_base** %3, align 8
  %21 = call i32 @memcpy(%struct.tk_read_base* @halt_fast_timekeeper.tkr_dummy, %struct.tk_read_base* %20, i32 24)
  store i32* @dummy_clock, i32** getelementptr inbounds (%struct.tk_read_base, %struct.tk_read_base* @halt_fast_timekeeper.tkr_dummy, i32 0, i32 0), align 8
  %22 = call i32 @update_fast_timekeeper(%struct.tk_read_base* @halt_fast_timekeeper.tkr_dummy, i32* @tk_fast_raw)
  ret void
}

declare dso_local i32 @memcpy(%struct.tk_read_base*, %struct.tk_read_base*, i32) #1

declare dso_local i32 @tk_clock_read(%struct.tk_read_base*) #1

declare dso_local i32 @update_fast_timekeeper(%struct.tk_read_base*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
